[package]
name = "dag-task-3"
version = "0.1.0"
edition = "2021"

[dependencies]
dag-task = { path = "../../lib/dag-task", version = "0.1" }
bpf-comm = { path = "../../lib/bpf-comm", version = "0.1" }
dag-bpf  = { path = "../../lib/dag-bpf",  version = "0.1" }
linux-utils = { path = "../../lib/linux-utils", version = "0.1" }
reactor-api = { path = "../../lib/reactor-api", version = "0.1" }
