[package]
name = "dag-task-src-1-sink-1"
version = "0.1.0"
edition = "2024"

[dependencies]
dag-task = { path = "../../lib/dag-task", version = "0.1" }
bpf-comm = { path = "../../lib/bpf-comm", version = "0.1" }
dag-bpf  = { path = "../../lib/dag-bpf",  version = "0.1" }
linux-utils = { path = "../../lib/linux-utils", version = "0.1" }
reactor-api = { path = "../../lib/reactor-api", version = "0.1" }
serde_yaml = "0.9.34"
serde = { version = "1.0.219", features = ["derive"] }
libbpf-sys = "1.5.0"
clap = { version = "4.5.36", features = ["derive"] }
